# milton-backend

./: .gitignore  pyproject.toml
scripts/: __init__.py  run_fred.py  search_test.py  setup.py  test_groq.py  test_search_api.py
src/milton_backend/: __init__.py
src/milton_backend/common/: models.py
src/milton_backend/database/: __init__.py  database.py  init_db.py  utils.py
src/milton_backend/fred_client/: client.py
src/milton_backend/lib/config/: config.py
src/milton_backend/lib/fred_client/: .client.py.swp  client.py
src/milton_backend/search/: __init__.py  search.py
src/milton_backend/server/: app.py  models.py
src/milton_backend/vector_db/: __init__.py  populate_db.py
