[project]
name = "milton-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pydantic>=2.8.2",
    "milton-backend",
    "fastapi>=0.112.2",
    "python-dateutil>=2.9.0.post0",
    "chromadb>=0.5.5",
    "instructor>=1.4.0",
    "groq>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
milton-backend = { workspace = true }
